--- a/index.html
+++ b/index.html
@@ -6,73 +6,106 @@
     <title>Age Calculator</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            font-family: 'Roboto', sans-serif;
+            background-color: #e9ecef;
             margin: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        header {
+            background-color: #343a40;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+        footer {
+            background-color: #343a40;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            font-size: 14px;
         }
         .container {
             background-color: #fff;
-            padding: 20px;
+            padding: 30px;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
             max-width: 400px;
             width: 100%;
+            margin: auto;
             text-align: center;
+            flex-grow: 1;
         }
         input[type="date"] {
             width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 4px;
-            border: 1px solid #ccc;
+            padding: 12px;
+            margin: 15px 0;
+            border-radius: 6px;
+            border: 1px solid #ced4da;
             font-size: 16px;
+            box-sizing: border-box;
         }
         button {
-            background-color: #28a745;
+            background-color: #007bff;
             color: #fff;
-            padding: 10px 20px;
+            padding: 12px 24px;
             border: none;
-            border-radius: 4px;
+            border-radius: 6px;
             cursor: pointer;
             font-size: 16px;
+            margin-top: 10px;
         }
         button:hover {
-            background-color: #218838;
+            background-color: #0056b3;
         }
         .result {
             margin-top: 20px;
-            font-size: 18px;
+            font-size: 20px;
             font-weight: bold;
+            color: #495057;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h2>Age Calculator</h2>
-        <input type="date" id="birthdate" placeholder="Select your birthdate">
-        <button onclick="calculateAge()">Calculate Age</button>
-        <div class="result" id="ageResult"></div>
-    </div>
 
-    <script>
-        function calculateAge() {
-            const birthdate = document.getElementById('birthdate').value;
-            const birthDate = new Date(birthdate);
-            const today = new Date();
-            let age = today.getFullYear() - birthDate.getFullYear();
-            const monthDiff = today.getMonth() - birthDate.getMonth();
-            const dayDiff = today.getDate() - birthDate.getDate();
+<header>
+    Age Calculator
+</header>
 
-            if (monthDiff < 0 || (monthDiff === 0 && dayDiff < 0)) {
-                age--;
-            }
+<div class="container">
+    <h2>Calculate Your Age</h2>
+    <input type="date" id="birthdate" placeholder="Select your birthdate">
+    <button onclick="calculateAge()">Calculate Age</button>
+    <div class="result" id="ageResult"></div>
+</div>
 
-            document.getElementById('ageResult').innerText = `You are ${age} years old.`;
+<footer>
+    &copy; 2024 Age Calculator. All rights reserved.
+</footer>
+
+<script>
+    function calculateAge() {
+        const birthdate = document.getElementById('birthdate').value;
+        const birthDate = new Date(birthdate);
+        const today = new Date();
+        let age = today.getFullYear() - birthDate.getFullYear();
+        const monthDiff = today.getMonth() - birthDate.getMonth();
+        const dayDiff = today.getDate() - birthDate.getDate();
+
+        if (monthDiff < 0 || (monthDiff === 0 && dayDiff < 0)) {
+            age--;
         }
-    </script>
+
+        document.getElementById('ageResult').innerText = `You are ${age} years old.`;
+    }
+</script>
+
 </body>
 </html>
