--- a/index.html
+++ b/index.html
@@ -89,6 +89,25 @@
             font-size: 16px;
             color: #6c757d;
         }
+        .info-box {
+            margin-top: 30px;
+            padding: 15px;
+            background-color: #e9ecef;
+            border-left: 5px solid #007bff;
+            border-radius: 5px;
+            text-align: left;
+        }
+        .info-box h3 {
+            font-size: 18px;
+            color: #343a40;
+            margin-bottom: 10px;
+        }
+        .info-box p {
+            font-size: 15px;
+            color: #495057;
+            margin: 0;
+            line-height: 1.6;
+        }
     </style>
 </head>
 <body>
@@ -107,6 +126,11 @@
     </form>
     <div class="result" id="ageResult"></div>
     <div class="additional-info" id="additionalInfo"></div>
+
+    <div class="info-box">
+        <h3>Why Use an Age Calculator?</h3>
+        <p>Knowing your exact age can be crucial for various reasons, such as determining eligibility for certain services, understanding your health metrics, or simply keeping track of your milestones. Our Advanced Age Calculator simplifies this process, offering precise calculations based on your birthdate.</p>
+    </div>
 </div>
 
 <footer>
