--- a/index.html
+++ b/index.html
@@ -107,6 +107,15 @@
             color: #495057;
             margin: 0;
             line-height: 1.6;
+            a:link, a:visited {
+  color: (internal value);
+  text-decoration: underline;
+  cursor: auto;
+}
+
+a:link:active, a:visited:active {
+  color: (internal value);
+}
         }
     </style>
 </head>
