--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <div class="info-box">
         <h3>Why Use an Age Calculator?</h3>
-        <p>Knowing your exact age can be crucial for various reasons, such as determining eligibility for certain services, understanding your health metrics, or simply keeping track of your milestones. Our Advanced  <a href="https://agecalculatoronline.org/age-calculator">Age Calculator</a>  simplifies this process, offering precise calculations based on your birthdate.</p>
+        <p>Knowing your exact age can be crucial for various reasons, such as determining eligibility for certain services, understanding your health metrics, or simply keeping track of your milestones. Our Advanced  <a href="https://agecalculatoronline.org/age-calculator/">Age Calculator</a>  simplifies this process, offering precise calculations based on your birthdate.</p>
     </div>
 </div>
 
